<resources>
    <string name="app_name">Calculator</string>
    <string name="calc_text_field"></string>
    <string name="_div">/</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_mul">*</string>
    <string name="_plus">+</string>
    <string name="_0">0</string>
    <string name="_c">C</string>
    <string name="_min">-</string>
    <string name="_eq">=</string>
    <string name="_point">.</string>
</resources>